--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -4,7 +4,7 @@
 	position: relative;
 }
 
-.nav {
+.navbar ul {
 	list-style: none;
 	display: flex;
 	gap: 50px;
@@ -13,15 +13,12 @@
 	margin-left: 3rem;
 }
 
-.navlink {
+.navbar a {
 	text-decoration: none;
 	transition: 0.3s;
 	color: black;
 }
 
-.navlink:hover {
-	background-color: gray;
-	color: white;
-	padding: 1px 5px 1px 5px;
-	border-radius: 5px;
+.navbar a:hover {
+	color: #fff;
 }
